--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -213,7 +213,7 @@ user$ | async; @if (poll) {
         [useSeenReaction]="poll.useSeenReaction"
         [condensedView]="useCondensedMovieView"
         [orderNumber]="poll.rankedMovieList ? i + 1 : false"
-        [isPollOwner]="userService.isCurrentUser(pollItem.creator)"
+        [isPollOwner]="userService.isCurrentUser(poll.owner)"
         [hideWatchedMovies]="hideWatchedMovies"
         (optionClicked)="pollItemClick(poll, pollItems, $event)"
         (onRemoved)="removePollItem(poll, $event, pollItems)"
