Add swiping functionality to background image of movie dialog.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -26,6 +26,7 @@
     }
     <div
       class="backdrop cursor-pointer"
+      swiper (swipeLeft)="onSwipeRight()" (swipeRight)="onSwipeLeft()"
       (click)="bgFullscreen = !bgFullscreen"
     >
       <img
