--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -61,7 +61,7 @@ user$ | async; @if (poll) {
               class="edit-button"
               mat-button
               color="primary"
-              (click)="editPoll(poll)"
+              (click)="editPoll(poll, pollItems)"
             >
               Edit
             </button>
