--- a/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.html
+++ b/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.html
@@ -98,6 +98,10 @@
     }
     <!-- <mat-slide-toggle [(ngModel)]="poll.allowRandomDraw" matTooltip="Allow drawing a random option">Allow random option draw</mat-slide-toggle> -->
   </div>
+  <button mat-button color="primary" (click)="duplicatePoll()">
+    <mat-icon>content_copy</mat-icon>
+    Copy poll
+  </button>
 </div>
 <div mat-dialog-actions>
   <button
