Fix recent polls and fevorites when removing poll. Fix adding of movie poll items into copied poll.

--- a/src/app/poll-management/poll-management.component.html
+++ b/src/app/poll-management/poll-management.component.html
@@ -189,7 +189,7 @@
           (click)="removeClicked(poll, poll.pollItems)"
           aria-label="Remove poll button"
         >
-          <mat-icon class="cursor-pointer">close</mat-icon>
+          <mat-icon class="cursor-pointer material-icons-outlined" >delete</mat-icon>
         </button>
       </div>
     </div>
