Remove angular animations. Fix poll description text wrapping.

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -113,7 +113,7 @@
         ></poster>
       </div>
       } @if(!((nowPlayingScroll$ | async) > 0)) {
-      <div class="right-edge" [@fadeInOut]></div>
+      <div class="right-edge" animate.enter="fade-in-animation" animate.leave="fade-out-animation"></div>
       }
     </div>
   </div>
