--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
       [rounded]="true"
       (movieSelected)="openMovie($event)"
       [useMiniMode]="true"
-      size="s"
+      [darkMode]="true"
     ></movie-search-input>
     <div class="popular-movies-container">
         @let popularMovies = popularMovies$ | async; 
