--- a/src/app/movie-search-input/movie-search-input.component.html
+++ b/src/app/movie-search-input/movie-search-input.component.html
@@ -1,13 +1,13 @@
 @let hover = hoverState$ | async;
 @let open = open$ | async;
-<div class="container" [ngClass]="{'mini-mode': useMiniMode, 'size-s': size === 's', 'hover': hover}" (click)="openClick()" (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()">
+<div class="container" [ngClass]="{'mini-mode': useMiniMode, 'size-s': size === 's', 'hover': hover, 'dark-mode': darkMode}" (click)="openClick()" (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()">
   @let searchResults = searchResults$ | async;
 
   <mat-form-field [class.has-options]="searchResults.length" [class.rounded]="rounded">
     <input
       type="text"
       matInput
-      [placeholder]="(useMiniMode && !open) ? '🔍' : '🎬 Search for a movie'"
+      [placeholder]="'🎬 Search for a movie'"
       aria-label="Movie"
       autocomplete="off"
       [formControl]="movieControl"
